--- a/css/utils.css
+++ b/css/utils.css
@@ -35,6 +35,37 @@
     margin-right: 3rem !important;
 }
 
+.mt-5{
+    margin-top: 3rem !important;
+}
+
+.container-fluid{
+    width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.col-md-4, .col-md-9, .col-md-3{
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+
 
 /*fonts*/
 
