--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,202 @@
+/* fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap");
+
+/* utils */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.text-center {
+  text-align: center;
+  font-size: 2em;
+  font-family: "Poppins", sans-serif;
+}
+
+.text-capitalize {
+  text-transform: capitalize !important;
+}
+
+.pt-5 {
+  padding-top: 3rem !important;
+}
+
+.w-25 {
+  width: 25% !important;
+}
+
+.mx-auto {
+  margin-right: auto !important;
+  margin-left: auto !important;
+}
+.mb-2{
+  margin-bottom: 2rem;
+}
+.btn-con {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  cursor: pointer;
+}
+
+.btn-con:hover, .btn-con:focus {
+  text-decoration: none;
+}
+
+.btn-con:focus, .btn-con.focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.btn-warning {
+  color: #212529;
+  background-color: #ffc107;
+  border-color: #ffc107;
+}
+
+.btn-warning:hover {
+  color: #212529;
+  background-color: #e0a800;
+  border-color: #d39e00;
+}
+
+.btn-warning:focus, .btn-warning.focus {
+  box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
+}
+.my-auto {
+  margin-top: auto !important;
+  margin-bottom: auto !important;
+}
+
+.ml-5 {
+  margin-left: 3rem !important;
+}
+
+.mr-5 {
+  margin-right: 3rem !important;
+}
+
+.mt-5{
+  margin-top: 3rem !important;
+}
+
+
+.container-fluid{
+  width: 100%;
+padding-right: 15px;
+padding-left: 15px;
+margin-right: auto;
+margin-left: auto;
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.col-md-4, .col-md-9, .col-md-3{
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+
+.text_effects{
+  text-shadow: 2px 2px 2px blue;
+  transition: transform 2s;
+}
+.text_effects:hover{
+  transform: rotate(360deg);
+}
+h4.font-2 {
+  font-size: 1.5rem;
+font-weight: 500;
+line-height: 1.2;
+color: inherit;
+margin-top: 0;
+margin-bottom: 0.5rem;
+margin-left: 10%;
+}
+.bg-primary {
+  background-color: #007bff !important;
+}
+
+.max-width-1 {
+  max-width: 80vw;
+}
+
+.m-auto {
+  margin: auto;
+}
+.contact-content{  
+  height: 100vh;
+  margin-top: 32px;
+  padding: 9px;
+  position: relative; 
+  overflow: hidden;
+}
+
+.form-box input, textarea{
+  width: 52vw;
+  padding: 0px 6px;
+  margin: 7px 0;
+  font-size: 18px;
+  font-family:  "Baloo Bhaina 2", cursive;
+  border: 2px solid #fc5c65;
+    border-radius: 5px;
+}
+
+.contact-content::after {
+  content: "";
+  background-image: url("../img/11.svg");
+  position: absolute;
+  top:0;
+  width: 100%;
+  height: inherit;
+  opacity: 0.15;
+  border-radius: 12px;
+  z-index: -1;
+}
+
+/* fonts  */
+.font-1 {
+  font-family: "Poppins", sans-serif;
+}
+.font-4 {
+  font-family: "Baloo Bhaina 2", cursive;
+}
+.font-2 {
+  font-family: 'Josefin Sans', sans-serif;
+}
+.font-3{
+  font-family: 'Montserrat', sans-serif;
+}
+
+
 /*navigation bar*/
 .navbar {
   display: flex;
@@ -68,7 +267,7 @@ span[aria-label="Next"]{
     font-family: 'Roboto', sans-serif;
 }
 span[aria-label="Next"]:hover{
-	color: #fff;
+	color: #494949;
 }
 
 span[aria-label="Previous"]{
@@ -80,8 +279,9 @@ span[aria-label="Previous"]{
     font-family: 'Roboto', sans-serif;
 }
 span[aria-label="Previous"]:hover{
-	color: #fff;
+	color: #494949;
 }
+
 
 /*destinations*/
 .destination .divine-destinations .container{
@@ -200,10 +400,138 @@ section.divine .card .box .contentBx div p{
     width: 100%;
     height: 100%;
 }
-.text_effects{
-    text-shadow: 2px 2px 2px blue;
-    transition: transform 2s;
+
+.brand-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.text_effects:hover{
-    transform: rotate(360deg );
+
+.brand-title img{ 
+  height: 44px;
+}
+
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.content {
+  height: 100%;
+  display: flex;
+  margin-top: 32px;
+  padding: 9px;
+  position: relative;
+}
+.content-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 1;
+}
+
+.content-right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+/* industry  */
+.industryitem1 , .industryitem2 , .industryitem3{
+  width: 60% !important;
+  margin: auto;
+}
+
+/* fotter  */
+footer{
+  background: #333333;
+  padding: 90px 0;
+  font-family: "Open Sans",sans-serif;
+  color: white;
+}
+
+.footer-container{
+  max-width: 1300px;
+  margin: auto;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap-reverse;
+}
+
+.logo{
+  width: 180px;
+}
+
+.social-media{
+  margin: 20px 0;
+}
+
+.social-media a{
+  color: #ffffff;
+  margin-right: 25px;
+  font-size: 22px;
+  text-decoration: none;
+  transition: .3s linear;
+}
+
+.social-media a:hover{
+  color: #fc5c65;
+}
+
+.right-col h1{
+  font-size: 26px;
+}
+
+.right-col p{
+  margin: 20px 0px;
+}
+
+.border{
+  width: 100px;
+  height: 4px;
+  background: #fc5c65;
+}
+
+.newsletter-form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.txtb{
+  flex: 1;
+  padding: 18px 40px;
+  font-size: 16px;
+  color: #293043;
+  background: #ddd;
+  border: none;
+  font-weight: 700;
+  outline: none;
+  border-radius: 30px;
+  min-width: 260px;
+}
+
+.btn{
+  padding: 18px 40px;
+  font-size: 16px;
+  color: #f1f1f1;
+  background: #fc5c65;
+  border: none;
+  font-weight: 700;
+  outline: none;
+  border-radius: 30px;
+  margin-left: 20px;
+  cursor: pointer;
+  transition: background-color .3s linear;
+}
+
+.btn:hover{
+  background-color: #f73b45;
 }
