--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ margin-left: 10%;
   overflow: hidden;
 }
 
-.form-box input, textarea{
+.form-box{
   width: 52vw;
   padding: 0px 6px;
   margin: 7px 0;
