--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
 
 .text-center {
   text-align: center;
@@ -294,6 +297,13 @@ span[aria-label="Previous"]:hover{
 		width: 20%;
 
 }
+.divine-destinations.two{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    transform-style: preserve-3d;
+}
 section.divine{
     display: flex;
     justify-content: center;
@@ -534,4 +544,105 @@ footer{
 
 .btn:hover{
   background-color: #f73b45;
+}
+
+.container-effect {
+  width: 1000px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.box {
+  position: relative;
+  width: 300px;
+  height: 400px;
+  background: #000;
+  box-shadow: 0 30px 30px rgba(0,0,0,.5);
+}
+
+.box .imgBx {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.box .imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s;
+}
+
+.box:hover .imgBx img {
+  opacity: 0;
+}
+
+.box .content-write {
+  position: absolute;
+  bottom: 20px;
+  left: 10%;
+  width: 80%;
+  height: 60px;
+  background: linear-gradient(to right , #f12711, #f5af19);
+  transition: 0.5s;
+  overflow: hidden;
+  color: white;    
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.box:hover .content-write {
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+}
+
+.box .content-write h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+}
+
+.box .content-write p {
+  margin: 10px 0 0;
+  padding: 0;
+  opacity: 0;
+  line-height: 1.2em;
+  transition: 0.5s;
+  text-align: justify;
+}
+
+.box:hover .content-write p {
+  opacity: 1;
+  transition-delay: 0.5s;
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  font-size: 25px;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+  border: 3.5px solid black;
+  background: #fc5c65;
+  border-radius: 50px;
+  outline: none;
+  color: #000000;
+  cursor: pointer;
+  padding: 25px;
+  transition: 0.5s;
+}
+
+#myBtn:hover{
+  background-color: #fc5c65!important;
+  border: 3.5px solid white;
+  color: #ffffff;
 }
